# fog

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: hello.fog
src/: bytecode.rs  main.rs  token.rs  value.rs  variable.rs
src/builder/: mod.rs
src/cli/: cmd.rs  mod.rs
src/complier/: block.rs  ir.rs  mod.rs
src/complier/lex/: mod.rs
src/complier/lexer/: coliner.rs  mod.rs  token_stream.rs  util.rs
src/complier/optimizer/: mod.rs
src/complier/parse/: mod.rs  wrapper.rs
src/complier/parse/control_flow/: mod.rs
src/complier/parse/exp/: mod.rs
src/complier/parser/: assert.rs  func.rs  mod.rs  wrapper.rs
src/complier/parser/control_flow/: mod.rs
src/complier/parser/exp/: cal.rs  lambda.rs  mod.rs
src/config/: dependencies.rs  mod.rs
src/core/: block.rs  bytecode.rs  ir.rs  mod.rs  namespace.rs  op.rs  token.rs  typ.rs  value.rs
src/lex/: mod.rs  util.rs
src/parse/: assert.rs  cal.rs  debug.rs  ir.rs  mod.rs  op.rs  wrap.rs  wrapper.rs
src/parse/control_flow/: mod.rs
src/parse/exp/: mod.rs
src/vm/: func.rs  manager.rs  mod.rs  wrapper.rs
src/vm/interpreter/: exec.rs  meta.rs  mod.rs  op.rs  wrapper.rs
src/vm/runtime/: global.rs  mod.rs
src/vm/runtime/method/: mod.rs
