[package]
name = "fog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
walkdir = "2.4.0"
