[package]
name = "fog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
bincode = "1.3.3"
serde_json = "1.0.108"
