[package]
name = "fog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
bincode = "1.3.3"
serde_json = "1.0.108"
anyhow = "1.0.75"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
